tests/spec/fail/generic_map_wrong_arity.aja
fuc bad(m: map[str]) -> void:
    return
